--- a/Romanian/main/BugReport.apk/res/values-ro/strings.xml
+++ b/Romanian/main/BugReport.apk/res/values-ro/strings.xml
@@ -17,6 +17,7 @@
     <string name="bugreport_tool_log">Creaţi un raport de probleme</string>
     <string name="bugreport_tool_log_toast">Raport salvat în %s</string>
     <string name="bugreport_tool_log_toast_generate_bugreport">Creare raport de probleme (durează aproximativ 1 minut)</string>
+    <string name="close_feedback_main">Ascundeți</string>
     <string name="cta_cancel">Anulaţi</string>
     <string name="cta_confirm">OK</string>
     <string name="cta_dialog_content">Această aplicație trebuie să se conecteze la internet pentru a funcţiona în mod normal.</string>
@@ -45,18 +46,23 @@
     <string name="err_type_system">Sistem</string>
     <string name="err_type_system_summary">Memorie, performanţă, etc.</string>
     <string name="err_type_systemapp">Aplicaţii MIUI</string>
+    <string name="err_type_translate">Limba</string>
     <string name="err_type_wifi">Wi-Fi</string>
     <string name="err_type_xiaomi_family">Familia Mi</string>
     <string name="err_type_xiaomi_service">Serviciu clienți</string>
     <string name="error_no_connection">"Nu s-a putut conecta la rețea"</string>
     <string name="feedback_bug_status_change_notification_desc">%1$s problema \"%2$s\"</string>
+    <string name="feedback_choose_module">Selectați elementul</string>
+    <string name="feedback_choose_module_hint">Necesar</string>
     <string name="feedback_collect_log_failed">"Nu s-au putut obține rapoartele de eroare"</string>
+    <string name="feedback_continue">Continuați expunerea problemei</string>
     <string name="feedback_description">Descriere</string>
     <string name="feedback_description_bugreport_hint">În unele situații (…) telefonul meu se comportă anormal (…).</string>
     <string name="feedback_description_label">Descriere</string>
     <string name="feedback_description_suggest_hint">"Doresc să adăugați o funcție nouă () deoarece îmi este folositoare pentru ()."</string>
     <string name="feedback_detail_tile">Progres</string>
     <string name="feedback_empty_report_list">Niciun raport încă</string>
+    <string name="feedback_guess">Părerea noastră</string>
     <string name="feedback_history_remind_login_desc">"Conectați-vă la contul Mi pentru a vedea detaliile și progresul raportului dumneavoastră"</string>
     <string name="feedback_id">ID: %d</string>
     <string name="feedback_jira_key">Cheia JIRA: %s</string>
@@ -68,12 +74,15 @@
     <string name="feedback_report_remind_login_desc2">"Puteți vedea, de asemenea, progresul raportului în \"Rapoartele mele\"."</string>
     <string name="feedback_retest_label">Pașii pentru reproducerea problemei</string>
     <string name="feedback_select_images">Adăugați imagini</string>
+    <string name="feedback_select_problem">Probleme</string>
+    <string name="feedback_select_suggestion">Sugestii</string>
     <string name="feedback_select_upload_log">Adăugați rapoarte de eoare</string>
     <string name="feedback_status_answered">Răspuns</string>
     <string name="feedback_status_change_notification_title">"Progresul raportului dumneavoastră a fost actualizat"</string>
     <string name="feedback_status_commit_failed_title">"Nu s-a putut trimite raportul"</string>
     <string name="feedback_status_commit_succ_title">Trimis</string>
     <string name="feedback_status_commit_uploading_title">Se trimite…</string>
+    <string name="feedback_status_jira_comment">Adăugați un comentariu</string>
     <string name="feedback_status_more">Detalii</string>
     <string name="feedback_status_processing">Procesare…</string>
     <string name="feedback_status_recorded">S-a primit feedback</string>
@@ -87,7 +96,7 @@
     <string name="feedback_submit_hint2">Mergeți la \"Rapoartele mele\" pentru a vedea detaliile</string>
     <string name="feedback_submit_succ">Trimis cu succes</string>
     <string name="feedback_submit_succ_button">Finalizat</string>
-    <string name="feedback_submitting">Se trimite…</string>
+    <string name="feedback_submitting">Se trimite</string>
     <string name="feedback_suggestion_status_change_notification_desc">%1$s sugestie \"%2$s\"</string>
     <string name="feedback_title">Titlu</string>
     <string name="feedback_title_hint">Descrieți pe scurt problema</string>
@@ -97,6 +106,8 @@
     <string name="first_position">2#</string>
     <string name="floor">%1$s#</string>
     <string name="from">de la %1$s</string>
+    <string name="goon_feedback_main">Continuați</string>
+    <string name="hint_feedback_main">Descrieți problema</string>
     <string name="loading_apps">Încărcare listă…</string>
     <string name="login_system_failed">"Nu s-a putut conecta; încercați din nou"</string>
     <string name="logo_title">Centrul de raportare probleme</string>
@@ -172,6 +183,20 @@
     <string name="modem_tool_log_start_toast">Porniţi înregistrarea jurnalului modemului în %s</string>
     <string name="modem_tool_log_stop">Opriţi</string>
     <string name="modem_tool_log_stop_toast">Opriţi înregistrarea jurnalului modemului în %s</string>
+    <string name="module_communication">Comunicații</string>
+    <string name="module_data">Stocare și aplicații clonate</string>
+    <string name="module_desktop">Ecranul principal și setări</string>
+    <string name="module_finance">Finanțe și Portofel Mi</string>
+    <string name="module_item_less">Ascundeți</string>
+    <string name="module_item_more">Mai multe</string>
+    <string name="module_medias">Media</string>
+    <string name="module_more">Mai multe</string>
+    <string name="module_network">Rețea și actualizări</string>
+    <string name="module_search">Căutare</string>
+    <string name="module_security">Securitate și Mi Cloud</string>
+    <string name="module_system">Sistem</string>
+    <string name="module_tools">Unelte de sistem</string>
+    <string name="modules">Selectați</string>
     <string name="multi_graph_more">Total elemente: %d</string>
     <string name="network_err">"Nu se poate conecta la rețea."</string>
     <string name="network_errorbtntip_custom">Încercați din nou</string>
@@ -193,6 +218,7 @@
     <string name="network_unavailable_dialog_title">Verificați conexiunea de date</string>
     <string name="non_system_app_select">Aplicaţii descărcate</string>
     <string name="nothing">--</string>
+    <string name="open_feedback_main">Mai multe</string>
     <string name="packaging_dialog_content">Creare raport…</string>
     <string name="pic_not_exist">"Această imagine nu există"</string>
     <string name="pic_view_format">%1$s/%2$s</string>
@@ -203,8 +229,10 @@
     <string name="pull_to_refresh_refreshing_label">Împrospătare…</string>
     <string name="pull_to_refresh_release_label">Eliberați pentru a împrospăta</string>
     <string name="refresh">Reîmprospătaţi</string>
+    <string name="related_question_answer_details">Probleme asemănătoare</string>
     <string name="reply">Răspuns</string>
-    <string name="reply_failed">Nu s-a putut răspunde</string>
+    <string name="reply_failed">"Nu s-a putut răspunde"</string>
+    <string name="reply_successful">Răspuns trimis cu succes</string>
     <string name="report_miui">Raport de probleme</string>
     <string name="request_empty_data">Lipsă date</string>
     <string name="save_pic">Salvați</string>
@@ -226,7 +254,11 @@
     <string name="tab_title_chat">Întrebări frecvente</string>
     <string name="tab_title_my_reports">Rapoartele mele</string>
     <string name="tab_title_report">Feedback</string>
+    <string name="title_answer_feedback_main">Am găsit răspunsurile!</string>
+    <string name="title_frequent_question_feedback_main">Întrebări frecvente</string>
+    <string name="title_mi_family">Dispozitive Mi din apropiere</string>
     <string name="title_nonsystem_app">Alte aplicaţii</string>
+    <string name="title_same_question_feedback_main">Probleme similare pe forumul MIUI</string>
     <string name="title_system_app">Aplicaţii MIUI</string>
     <string name="toast_description_required">Descrierea este necesară</string>
     <string name="toast_feedback_collect_store">Colectare jurnale…</string>
@@ -236,8 +268,10 @@
     <string name="toast_feedback_submitting">Trimitere…</string>
     <string name="toast_feedbackservice_in_submit">Manipulare feedback precedent…</string>
     <string name="toast_fill_brackets">Din raportul dvs. lipsesc câteva informaţii</string>
+    <string name="toast_module_required">Selectați elementul</string>
     <string name="toast_network_unavailable">Nu s-a putut trimite raportul. Nu se poate conecta la rețea.</string>
     <string name="toast_pending_log_collection">Colectare jurnale…</string>
+    <string name="toast_problem_class_required">Selectați categoria</string>
     <string name="toast_report_copied_to_clipboard">Raportul a fost copiat în clipboard</string>
     <string name="toast_report_sent_failed">Imposibil de trimis raportul</string>
     <string name="toast_report_sent_succeed">Raportul a fost trimis</string>
