--- a/Romanian/main/TeleService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/TeleService.apk/res/values-ro/strings.xml
@@ -341,7 +341,7 @@
     <string name="dialpad_star_letters"/>
     <string name="dialpad_star_number">*</string>
     <string name="dialpad_three">3</string>
-    <string name="dialpad_tuv">TȚUV</string>
+    <string name="dialpad_tuv">TUV</string>
     <string name="dialpad_two">2</string>
     <string name="dialpad_wxyz">WXYZ</string>
     <string name="dialpad_zero">0</string>
