--- a/Romanian/main/AntiSpam.apk/res/values-ro/strings.xml
+++ b/Romanian/main/AntiSpam.apk/res/values-ro/strings.xml
@@ -300,12 +300,12 @@
     <string name="st_sub_title_customize_mode_name">Nume</string>
     <string name="st_sub_title_whiteblack_list_group">Listă blocări</string>
     <string name="st_sum_call_wait">Mesajul dvs. de plecat va fi, de asemenea, redat ca un semnal de ocupat pentru apelurile primite.</string>
-    <string name="st_summary_blacklist_numbers">Blocați apelurile și mesajele utilizând numere de telefon și prefixe</string>
-    <string name="st_summary_blacklist_numbers_international">Blocați apeluri și mesaje utilizând numere de telefon</string>
+    <string name="st_summary_blacklist_numbers">Blocați apelurile și mesajele provenite de la anumite numere de telefon și prefixe</string>
+    <string name="st_summary_blacklist_numbers_international">Blocați apelurile și mesajele de la anumite numere de telefon și prefixe</string>
     <string name="st_summary_keywords_blacklist">Adăugați cuvinte cheie pentru a bloca unele mesaje</string>
     <string name="st_summary_special_numbers">Blocați numerele de telefon marcate</string>
     <string name="st_summary_whitelist_numbers">Permiteți primirea apelurilor și mesajelor de la anumite numere de telefon și prefixe</string>
-    <string name="st_summary_whitelist_numbers_international">Permiteți apelurile și mesajele de la anumite numere de telefon</string>
+    <string name="st_summary_whitelist_numbers_international">Permiteți apelurile și mesajele provenite de la anumite numere de telefon și prefixe</string>
     <string name="st_title_adblock_group">Blocare reclame</string>
     <string name="st_title_adblock_setting">Setări blocare reclame</string>
     <string name="st_title_addblacklist">Adăugaţi în lista blocărilor</string>
@@ -348,7 +348,7 @@
     <string name="tab_block_log_unKnowNumber">Număr privat</string>
     <string name="tab_call">Apeluri</string>
     <string name="tab_sms">Mesaje</string>
-    <string name="tab_title">AntiSpam</string>
+    <string name="tab_title">Lista blocărilor</string>
     <string name="toast_keyword_blank">Trebuie să introduceţi un cuvânt cheie</string>
     <string name="toast_keyword_exist">Cuvânt cheie adăugat</string>
     <string name="toast_keyword_invalid">Cuvântul cheie introdus este greşit</string>
