--- a/Romanian/main/CloudService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CloudService.apk/res/values-ro/strings.xml
@@ -50,7 +50,7 @@ Ultima copie de rezervă a fost creată la %2$s"</string>
     <string name="cloud_space_upgrade_message">Apăsați pentru a adăuga %s GB în contul dvs. de Cloud</string>
     <string name="cloud_space_upgrade_no_quota_info">Nu s-au putut obține informații despre stocare</string>
     <string name="cloud_space_upgrade_title">Mai mult spațiu pentru Mi Cloud</string>
-    <string name="cloud_storage_full">Stocare în Cloud</string>
+    <string name="cloud_storage_full">Stocarea în Cloud este plină</string>
     <string name="cloud_storage_is_full">Plin</string>
     <string name="cloudservice_new_sync">Sincronizaţi %s cu Mi Cloud</string>
     <string name="cmcc_micloud_dspt">Utilizaţi Mi Cloud pentru a sincroniza datele, pentru a localiza dispozitivul dvs. și pentru a partaja lucruri prietenilor</string>
@@ -185,7 +185,7 @@ la contul dvs. Mi pentru a reactiva Mi Cloud."</string>
     <string name="micloud_detail_lastest">Sincronizat</string>
     <string name="micloud_detail_lastest_with_off">Sincronizat</string>
     <string name="micloud_detail_not_sync">%d așteaptă sincronizarea</string>
-    <string name="micloud_detail_not_synced">nesincronizat</string>
+    <string name="micloud_detail_not_synced">Nesincronizat</string>
     <string name="micloud_detail_ok">OK</string>
     <string name="micloud_detail_pending">Aşteptare</string>
     <string name="micloud_detail_preference_sync_items">Elemente</string>
@@ -197,8 +197,6 @@ la contul dvs. Mi pentru a reactiva Mi Cloud."</string>
     <string name="micloud_detail_syncing">Sincronizare</string>
     <string name="micloud_detail_upload_syncing">Încărcare %s</string>
     <string name="micloud_detail_wlan">%d așteaptă sincronizarea</string>
-    <string name="micloud_detail_wlan_contact">Fotografii de contact care așteaptă sincronizarea: %d</string>
-    <string name="micloud_detail_wlan_mms">%d mesaje MMS așteaptă sincronizarea</string>
     <string name="micloud_dspt">" Utilizaţi Mi Cloud pentru a sincroniza datele, pentru a localiza dispozitivul"</string>
     <string name="micloud_dspt_provision">Utilizaţi Mi Cloud pentru a sincroniza datele, localiza dispozitivul și pentru a partaja lucruri prietenilor.</string>
     <string name="micloud_find_device_finish">Realizat</string>
@@ -239,7 +237,6 @@ Pentru a rezolva acest lucru, fie puteți şterge unele fișierele vechi, fie pu
     <string name="micloud_main_battery_low">Nivelul acumulatorului este prea scăzut pentru a sincroniza</string>
     <string name="micloud_main_battery_message">Conectați încărcătorul pentru a sincroniza</string>
     <string name="micloud_main_clear_now">Curăță</string>
-    <string name="micloud_main_data_unsynced">%d aşteaptă sincronizarea</string>
     <string name="micloud_main_detail">Vizualizaţi detaliile</string>
     <string name="micloud_main_last_sync_time">Ultima sincronizare: %s</string>
     <string name="micloud_main_memory_low_message">"Pentru a realiza sincronizarea, ștergeți din datele inutile stocate."</string>
@@ -252,7 +249,6 @@ Pentru a rezolva acest lucru, fie puteți şterge unele fișierele vechi, fie pu
     <string name="micloud_main_multi_user_error_title">Eroare MiCloud</string>
     <string name="micloud_main_network_abnormal">Nu se poate conecta la rețea</string>
     <string name="micloud_main_network_error">Nu se poate conecta la rețea</string>
-    <string name="micloud_main_not_sync">Elemente care așteaptă sincronizarea: %d</string>
     <string name="micloud_main_query_error_message">"Nu se poate verifica dacă sincronizarea tuturor serviciilor s-a finalizat"</string>
     <string name="micloud_main_query_error_title">"Nu s-au putut obține informații despre starea sincronizării"</string>
     <string name="micloud_main_set_internet">Reţea</string>
@@ -308,7 +304,6 @@ Pentru a rezolva acest lucru, fie puteți şterge unele fișierele vechi, fie pu
     <string name="micloud_notif_content_sync_with_off">Apăsați pentru a vă sincroniza dispozitivul acum.</string>
     <string name="micloud_notif_title_battery_low">"Nu se poate sincroniza cu Mi Cloud"</string>
     <string name="micloud_notif_title_clipboard_push">Conținut copiat în clipboard</string>
-    <string name="micloud_notif_title_depend_wifi">Elemente în așteptarea sincronizării: %d</string>
     <string name="micloud_notif_title_master_depend_wifi">"Nu se poate sincroniza cu Mi Cloud"</string>
     <string name="micloud_notif_title_memory_low">"Nu se poate sincroniza cu Mi Cloud"</string>
     <string name="micloud_notif_title_multi_user_error">"Nu se poate sincroniza cu Mi Cloud"</string>
@@ -395,11 +390,10 @@ Această caracteristică criptează și trimite ID-ul dispozitivului dvs. pe ser
     <string name="mx_sub_dspt_provision">Mi Message</string>
     <string name="mx_sub_dspt_provision_with_voip">Apelare prin internet</string>
     <string name="mx_voip_dspt">>Mi Voice</string>
-    <string name="network_unconnected">Nu sunteți conectat la rețea</string>
+    <string name="network_unconnected">"Nu s-a putut conecta la rețea"</string>
     <string name="next">Înainte</string>
     <string name="noRemind">Nu-mi reaminti</string>
     <string name="no_sim">Niciun card SIM detectat</string>
-    <string name="one_sync_item_close">%d este oprită</string>
     <string name="open_micloud_sync">Porniți sincronizarea cu Mi Cloud</string>
     <string name="other_settings">Alte setări</string>
     <string name="other_sync_item">Alte elemente sincronizate</string>
@@ -421,11 +415,11 @@ Această caracteristică criptează și trimite ID-ul dispozitivului dvs. pe ser
     <string name="search_cloudbackup_pref">Copie Cloud</string>
     <string name="search_cloudbackup_pref_desc">Dezactivați/activați copiile în Cloud</string>
     <string name="search_cloudbackup_pref_key_words">copie de rezervă cloud, copie cloud</string>
-    <string name="search_cloudbackup_pref_path">Contul Mi/Mi Cloud/CREARE COPIE DE REZERVĂ ȘI RESTAURARE</string>
+    <string name="search_cloudbackup_pref_path">Contul Mi/Mi Cloud/Creare copie de rezervă pentru aplicații</string>
     <string name="search_finddevice_pref">Localizare dispozitiv</string>
     <string name="search_finddevice_pref_desc">Activare/dezactivare Localizare dispozitiv</string>
     <string name="search_finddevice_pref_key_words">localizare dispozitiv, găsire telefon</string>
-    <string name="search_finddevice_pref_path">Contul Mi/Mi Cloud/LOCALIZARE DISPOZITIV</string>
+    <string name="search_finddevice_pref_path">Contul Mi/Mi Cloud/Localizare telefon</string>
     <string name="setting">Setări</string>
     <string name="settings_backup_title">Creare copie de rezervă pentru setările de sistem</string>
     <string name="share_cancel">Partajare anulată</string>
@@ -442,7 +436,6 @@ Această caracteristică criptează și trimite ID-ul dispozitivului dvs. pe ser
     <string name="sina_token_expired_warning">Cont Weibo expirat: reconectaţi-vă</string>
     <string name="sina_token_invalid_warning">Cont Weibo nevalid: reconectaţi-vă</string>
     <string name="sms">Mesaje</string>
-    <string name="some_sync_item_close">%d sunt oprite</string>
     <string name="soundrecorder_sync_only_in_wifi">Utilizați doar Wi-Fi pentru sincronizare</string>
     <string name="soundrecorder_sync_only_in_wifi_summary">Aplicația Înregistrare nu va utiliza datele mobile pentru a descărca sau încărca înregistrări</string>
     <string name="soundrecorder_sync_records">Sincronizare cu Mi Cloud</string>
