--- a/Romanian/main/Email.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Email.apk/res/values-ro/strings.xml
@@ -18,6 +18,10 @@
     <string name="account_set_up_change_type_note">Dacă aveți nevoie să comutaţi între setările POP3 și IMAP, ștergeţi contul și creaţi unul nou cu setările dorite.</string>
   <string name="account_setting">Setările contului</string>
   <string name="account_setting_keywords">Conturi de poștă electronică; conturi de e-mail; e-mail prin setările contului de e-mail; Setările contului de e-mail;mail accounts</string>
+    <string name="account_setting_message_body_load_complete">E-mailul complet</string>
+    <string name="account_setting_message_body_load_head_abstract">Sumarul e-mailului</string>
+    <string name="account_setting_message_body_load_head_only">Doar titlul</string>
+    <string name="account_setting_message_body_load_text">Doar conținutul</string>
     <string name="account_settings_action">Setări cont</string>
     <string name="account_settings_background_attachments_label">Descărcaţi ataşamentele</string>
     <string name="account_settings_background_attachments_summary">Descărcaţi ataşamentele prin Wi-Fi</string>
@@ -117,12 +121,12 @@ Actualizaţi acum?"</string>
     <string name="account_setup_options_mail_check_frequency_12hour">La fiecare 12 ore</string>
     <string name="account_setup_options_mail_check_frequency_1hour">În fiecare oră</string>
     <string name="account_setup_options_mail_check_frequency_4hour">La fiecare 4 ore</string>
-    <string name="account_setup_options_mail_check_frequency_imap_push">Automat (Push, dacă serverul permite)</string>
+    <string name="account_setup_options_mail_check_frequency_imap_push">Automat (Push)</string>
     <string name="account_setup_options_mail_check_frequency_never">Niciodată</string>
     <string name="account_setup_options_mail_check_frequency_push">Automat (Push)</string>
     <string name="account_setup_options_mail_window_1day">Ieri</string>
     <string name="account_setup_options_mail_window_1month">Luna trecută</string>
-    <string name="account_setup_options_mail_window_1quarter">Ultimul trimestru</string>
+    <string name="account_setup_options_mail_window_1quarter">Trimestru</string>
     <string name="account_setup_options_mail_window_1week">Săptămâna trecută</string>
     <string name="account_setup_options_mail_window_2weeks">Ultimele 2 săptămâni</string>
     <string name="account_setup_options_mail_window_3days">Ultimele trei zile</string>
@@ -186,6 +190,7 @@ Actualizaţi acum?"</string>
     <string name="attachment_not_exists">Atașamentul nu este disponibil!</string>
     <string name="attachment_open_SecurityException_hint">Verificare permisiuni, daune, etc.</string>
     <string name="attachment_open_SecurityException_title">Nu s-a reușit deschiderea fișierului</string>
+    <string name="attachment_size_exceed_limit">"Se pare că mărimea e-mailului a depășit limita acceptată de către server"</string>
     <string name="attachment_stop_all">Opriţi</string>
     <string name="attachment_text">Text</string>
     <string name="attachment_type_blocked">Din păcate, nu puteți salva sau deschide acest tip de atașament.</string>
@@ -234,7 +239,7 @@ Actualizaţi acum?"</string>
     <string name="colon">:</string>
     <string name="compose">Compuneţi</string>
     <string name="compose_attachment_number_limit">Numărul maxim de atașări este 10!</string>
-    <string name="compose_paste_address_oob">Conținutul lipit este prea lung și a fost trunchiat</string>
+    <string name="compose_paste_address_oob">Prea multe caractere</string>
     <string name="compose_picturesexceedlimits">Numărul maxim de imagini incluse este 5!</string>
     <string name="compose_send">Trimiteţi</string>
     <string name="compose_sent">E-mail trimis</string>
@@ -252,14 +257,12 @@ Actualizaţi acum?"</string>
     <string name="confirm_send_message_with_no_body">Nu există niciun text în corpul mesajului.</string>
     <string name="confirm_send_message_with_no_subject">Acest mesaj nu are un subiect.</string>
     <string name="confirm_send_title">Trimiteţi mesajul?</string>
-    <string name="contact_edit_set_black_list">Setaţi lista blocărilor</string>
     <string name="contact_edit_set_black_list_from">Ștergeți toate e-mailurile de la acest expeditor</string>
     <string name="contact_edit_set_black_list_receive">Ștergere e-mail către acest destinatar</string>
     <string name="contact_edit_set_black_list_receive_summary">Se şterge e-mailul ce conţine acest destinatar în câmpurile La sau Cc</string>
     <string name="contact_edit_set_black_list_title">Adăugați în lista blocărilor</string>
     <string name="contact_edit_set_phone_contact">Editaţi contactele din telefon</string>
     <string name="contact_edit_title_phone_contact">Lista contactelor din telefon</string>
-    <string name="contact_in_filter_call_phone_str">apelaţi: %s</string>
     <string name="contact_in_filter_title">E-mailurile de la acest expeditor</string>
     <string name="contact_info_string">Afişaţi informațiile de contact pentru %1$s</string>
     <string name="contact_info_string_default">Afişaţi informațiile de contact</string>
@@ -274,7 +277,7 @@ Actualizaţi acum?"</string>
     <string name="contextmenu_add_contact">Adăugaţi o persoană de contact</string>
     <string name="contextmenu_call">Apelaţi</string>
     <string name="contextmenu_copy">Copiaţi</string>
-    <string name="contextmenu_copylink">Copiaţi adresa URL a linkului</string>
+    <string name="contextmenu_copylink">Copiaţi adresa URL</string>
     <string name="contextmenu_create">Creaţi un contact nou</string>
     <string name="contextmenu_dial_dot">Apelaţi…</string>
     <string name="contextmenu_edit">Editaţi contactul</string>
@@ -290,6 +293,9 @@ Actualizaţi acum?"</string>
     <string name="conversation_item_mark_read">Citit</string>
     <string name="conversation_item_mark_unread">Necitit</string>
     <string name="conversation_photo_welcome_text">Atingeți imaginea expeditorului pentru a selecta o conversație.</string>
+    <string name="conversation_quick_button_approve">De acord</string>
+    <string name="conversation_quick_button_disapprove">Nu sunt de acord</string>
+    <string name="conversation_quick_button_received">Primite</string>
   <string name="conversation_view">sesiunea de afișare</string>
   <string name="conversation_view_keywords">vizualizare conversații;vizualizare e-mailuri</string>
     <string name="copied">Copiat</string>
@@ -344,7 +350,6 @@ Actualizaţi acum?"</string>
     <string name="download_confirm_message">Descărcaţi %1$s ataşamente?</string>
     <string name="download_confirm_title">Descărcaţi ataşamentul</string>
     <string name="download_message_failed_for_too_large">Mesajul este prea mare pentru a putea fi descărcat.</string>
-    <string name="download_whole_email">Vizualizați și restul mesajului</string>
     <string name="draft_count_format"> (%1$s)</string>
     <string name="drawer_close">Închideți panoul de navigare</string>
     <string name="drawer_contacts">Contacte</string>
@@ -388,6 +393,7 @@ Actualizaţi acum?"</string>
     <string name="file_not_found_redownload">Nu se poate găsi fișierul</string>
     <string name="file_rar_not_support">Nu se pot deschide fișiere de tip .rar criptate</string>
     <string name="filtered_tag">" [%1$s]%2$s"</string>
+    <string name="first_quick_default_reply">Apăsați acest buton și \"%s\" va fi trimis tuturor destinatarilor.</string>
     <string name="folder_drafts_name_cn0">Proiecte</string>
     <string name="folder_drafts_name_cn1">Schițe</string>
     <string name="folder_drafts_name_cn2">[Gmail]/Proiecte</string>
@@ -436,7 +442,7 @@ Actualizaţi acum?"</string>
     <string name="general_preference_confirm_delete_label">Confirmaţi înainte de a şterge</string>
     <string name="general_preference_confirm_send_label">Confirmaţi înainte de a trimite</string>
     <string name="general_preference_str_auto_translation">Traducere rapidă</string>
-    <string name="general_preference_str_auto_translation_prompt">Copiați conținutul corespunzător pentru a vedea traducerea</string>
+    <string name="general_preference_str_auto_translation_prompt">Copiați textul pentru a vedea traducerea</string>
     <string name="general_preference_text_zoom_dialog_title">Dimensiune text mesaj</string>
     <string name="general_preference_text_zoom_huge">Foarte mare</string>
     <string name="general_preference_text_zoom_label">Dimensiune text mesaj</string>
@@ -464,18 +470,10 @@ Actualizaţi acum?"</string>
     <string name="hint_quick_reply_all">Răspundeţi tuturor</string>
     <string name="imap_name">IMAP</string>
     <string name="imap_password_error">Parola pentru serverul de intrare este incorectă</string>
-    <string name="info_actionbar_normal_detail">Detalii</string>
-    <string name="info_actionbar_subscribe">Flux de știri</string>
-    <string name="info_item_from">De la </string>
+    <string name="info_actionbar_normal_detail">Promoție</string>
     <string name="info_item_hide">Ascundeți</string>
-    <string name="info_loading">Încărcare...</string>
-    <string name="info_name_title">NOUTĂȚI</string>
-    <string name="info_no_message">Niciun articol!</string>
-    <string name="info_no_more_message">Nu există alte mesaje de vizualizat</string>
-    <string name="info_switch_summary">Vedeți cele mai importante noutăți</string>
-    <string name="info_switch_title">Conținut NOUTĂȚI</string>
-    <string name="info_sync_error">"Eroare de sincronizare; încercați din nou mai târziu."</string>
-    <string name="information_subscribe_first_intro">"Se pare că utilizați Fluxul de știri pentru prima dată. Prezentați-ne domeniile de care sunteți interesat pentru a vă putea personaliza recomandările."</string>
+    <string name="info_switch_summary">Vedeți promoțiile deasupra mesajelor primite</string>
+    <string name="info_switch_title">Promoții</string>
     <string name="inline_picture_deleted">Se descărcă imaginea ce lipsește…</string>
     <string name="input_password_prompt">Introduceţi parola dvs.</string>
     <string name="invalid_recipient">Adresa %s este greşită.</string>
@@ -486,7 +484,7 @@ Actualizaţi acum?"</string>
     <string name="load_more">Încărcaţi mai multe</string>
     <string name="loading_conversation">Încărcare…</string>
     <string name="loading_conversations">Încărcare…</string>
-    <string name="loading_from_remote">Căutare…</string>
+    <string name="loading_from_remote">Se încarcă…</string>
     <string name="local_search">Căutare locală</string>
     <string name="local_search_result">%s rezultate găsite în mesajele sincronizate</string>
     <string name="login">Conectaţi-vă</string>
@@ -569,7 +567,8 @@ Actualizaţi acum?"</string>
     <string name="menu_att_mgr_order_size">Sortaţi după dimensiune</string>
     <string name="menu_change_folders">Mutaţi</string>
     <string name="menu_compose">Scrieţi</string>
-    <string name="menu_discovery">Descoperiți</string>
+    <string name="menu_contact_edit">Editați</string>
+    <string name="menu_discovery">Promoții</string>
     <string name="menu_folder_options">Opţiuni de sincronizare</string>
     <string name="menu_move_to">Mutaţi în</string>
     <string name="menu_move_to_inbox">Mutați în Mesaje primite</string>
@@ -580,6 +579,7 @@ Actualizaţi acum?"</string>
     <string name="menu_search">Căutaţi</string>
     <string name="menu_settings">Setări</string>
     <string name="merged_mailbox_compose_select_account">Selectaţi contul</string>
+    <string name="message_body_load_set_description">Conținutul de încărcat al e-mailurilor noi la utilizarea datelor mobile</string>
     <string name="message_compose_insert_quick_response_list_title">Introduceţi un răspuns rapid</string>
     <string name="message_count_spacer">  </string>
     <string name="message_decode_error">A apărut o eroare la decodificarea mesajului.</string>
@@ -603,7 +603,6 @@ Actualizaţi acum?"</string>
     <string name="move_to_selection_dialog_title">Mutaţi în alt dosar</string>
     <string name="multiple_new_message_notification_item"><b>%1$s</b> %2$s</string>
     <string name="mute">Suprimaţi</string>
-    <string name="net_check_title">"Nu s-a putut conecta la rețea. Verificați conexiunea și reîncercați."</string>
     <string name="network_error">Nicio conexiune</string>
     <string name="network_not_available">"Nu se poate conecta la rețea"</string>
     <string name="network_try_again">Verificați setările rețelei</string>
@@ -736,7 +735,6 @@ Actualizaţi acum?"</string>
     <string name="protocol_legacy_imap">imap</string>
     <string name="protocol_pop3">pop3</string>
     <string name="pull_to_refresh">Glisați în jos pentru a actualiza</string>
-    <string name="pull_up_to_load_more">Glisați în sus pentru a încărca mai multe</string>
     <string name="push_wps_better_confirm_download">Descărcaţi</string>
     <string name="push_wps_better_confirm_exit">Nu acum</string>
     <string name="push_wps_better_confirm_message">Încercaţi să utilizaţi WPS Office pentru a deschide acest atașament.</string>
@@ -765,6 +763,7 @@ Actualizaţi acum?"</string>
     <string name="quick_reply_hint_bcc">(În BCC)</string>
     <string name="quick_reply_hint_cc">(În CC)</string>
     <string name="quick_reply_hint_reply_only_from">Răspuns rapid (doar către expeditor)</string>
+  <string name="quick_reply_pattern">* Aprobarea * |. * Aprobarea * |. * Aplicație * |. * * Declarație |. .. * * Recomandări |. * * Cerere..</string>
     <string name="quick_responses_empty_view">Niciun răspuns rapid</string>
     <string name="quote_begin">&lt;div class=\"wps_quotion\"&gt;</string>
     <string name="quote_divider_1">-------- Mesaj original --------</string>
@@ -799,6 +798,7 @@ Actualizaţi acum?"</string>
     <string name="refreshing">Actualizare…</string>
     <string name="refreshing_done">Finalizat</string>
     <string name="release_to_refresh">Eliberați pentru a actualiza</string>
+    <string name="remind_attachment_size_limit">Mărimea e-mailurilor ar trebui să fie sub %s MB</string>
     <string name="remote_search_result">%s e-mailuri găsite în toate e-mailurile de pe server</string>
     <string name="remove_account">Eliminaţi contul</string>
     <string name="remove_folder">Eliminaţi din %1$s</string>
@@ -838,16 +838,17 @@ Actualizaţi acum?"</string>
     <string name="security_unsupported_ticker_fmt">"Contul \"%s\" nu poate fi sincronizat din cauza cerințelor de securitate.</string>
     <string name="select_attachment_type">Alegeţi ataşamentul din</string>
     <string name="select_no_file">Niciun ataşament selectat</string>
-    <string name="selected_lable">Selectate</string>
     <string name="send">Trimiteţi</string>
     <string name="send_failed">Mesaj netrimis.</string>
   <string name="send_feed_back">trimiteţi feedback</string>
   <string name="send_feed_back_keywords">trimiteţi feedback</string>
+    <string name="send_mail">Trimiteți</string>
     <string name="sender_whitelist_cleared">Imaginile nu vor fi afișate în mod automat.</string>
     <string name="senders_elided">..</string>
     <string name="senders_split_token">, </string>
     <string name="sending">Se trimite…</string>
     <string name="sending_message">Se trimite mesajul…</string>
+    <string name="sending_quick_reply">Se trimite e-mailul \"%s\"</string>
     <string name="sent_folder_selection_title">Dosar articole trimise pentru %s</string>
     <string name="ser_resp_err_map_certificate_validator_err">"Nu s-a putut valida certificatul de server
 \u0009 (Asigurați-vă că \"timpul de sincronizare automată\" este activat în Setări)"</string>
@@ -918,14 +919,14 @@ Actualizaţi acum?"</string>
     <string name="too_large_to_attach_multiple">Unul sau mai multe fişiere nu au fost ataşate. Limita maximă este de %1$s.</string>
     <string name="too_large_to_attach_single">Nu puteţi ataşa fişiere care depăşesc %1$s.</string>
     <string name="topic_merge">Îmbinați subiectele</string>
-    <string name="translation_loading">Încărcare…</string>
+    <string name="translation_loading">Doar o secundă…</string>
     <string name="translation_no_result">Niciun rezultat</string>
-    <string name="translation_pronunciation_am">ArE</string>
+    <string name="translation_pronunciation_am">AmE</string>
     <string name="translation_pronunciation_cn">Pinyin</string>
     <string name="translation_pronunciation_en">BrE</string>
     <string name="translation_pronunciation_other">Machine</string>
-    <string name="translation_query_failure">Căutarea a eșuat</string>
-    <string name="translation_technology_support">Suport tehnic oferit de PowerWord</string>
+    <string name="translation_query_failure">"Nu s-a găsit niciun rezultat"</string>
+    <string name="translation_technology_support">Suport tehnic oferit de iciba.com</string>
     <string name="trash_folder_selection_title">Dosarul Coş de gunoi pentru %s</string>
     <string name="trigger_compose_char">c</string>
     <string name="trigger_refresh_char">u</string>
@@ -938,7 +939,6 @@ Actualizaţi acum?"</string>
     <string name="turn_auto_sync_on_dialog_title">Activaţi sincronizarea automată?</string>
     <string name="undo">Anulaţi</string>
     <string name="unread_string">conversație necitită</string>
-    <string name="unselected_lable">Mai multe</string>
     <string name="unsent_messages_in_outbox">%1$s netrimise în %2$s</string>
     <string name="unzip_file_failed">Nu s-a putut dezarhiva fişierul</string>
     <string name="update_date_format_templete">HH:mm, dd MMMM</string>
@@ -969,7 +969,7 @@ Atingeţi \"Sincronizaţi acum\" pentru a sincroniza e-mailurile, sau modificaţ
     <string name="wipe_account_fail_title">"Nu s-au putut șterge informațiile personale"</string>
     <string name="wrong_password">Parola introdusă este incorectă</string>
     <string name="yes">Da</string>
-    <string name="yidianzixun">Yi Dian Zixun</string>
     <string name="you_are_in_mobile_network">Trimiteţi jurnalul utilizând conexiunea de date mobile? Dacă depăşiţi limita de date din planul dvs., operatorul ar putea percepe taxe suplimentare.</string>
+    <string name="youfuli">Promoții</string>
     <string name="zip_viewer_no_file">Niciun fişier.</string>
 </resources>
