--- a/Romanian/main/MiuiVideo.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiVideo.apk/res/values-ro/strings.xml
@@ -89,6 +89,7 @@
     <string name="count_ge_media">%d videoclipuri</string>
     <string name="count_ji_quan">Ep. %d</string>
     <string name="count_qi">Ep. %s</string>
+    <string name="create_tencent_shortcut_message">S-a creat pe ecranul principal o scurtătură pentru Videoclipuri Tencent</string>
     <string name="data_buffering">Încărcare memorie tampon</string>
     <string name="datastream_alert_download">Utilizarea conexiunii de date mobile pentru a descărca videoclipuri va creşte utilizarea datelor. Dacă depăşiţi limita planului dvs., operatorul ar putea percepe taxe suplimentare.</string>
     <string name="datastream_alert_hint">Puteți dezactiva notificările de utilizare a datelor în orice moment în Setări.</string>
@@ -364,6 +365,7 @@
     <string name="tab_loading">&lt;CDATA&gt;...&lt;/CDATA&gt;</string>
     <string name="temp_play_history_button_label">Afişaţi istoricul redărilor</string>
     <string name="tencent">Tencent</string>
+  <string name="tencent_shortcut_name">Dragoste melc</string>
     <string name="to_be_play_label_v5">"Următorul: "</string>
     <string name="toast_back_key_pressed_notice">Pentru a ieşi, apăsaţi Înapoi din nou</string>
     <string name="toast_message_continue_play_from">"Redare de la "</string>
