--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
@@ -57,7 +57,6 @@
     <string name="app_name">Cont Mi</string>
     <string name="auth_fail_warning">Sesiunea a expirat, conectați-vă din nou mai târziu</string>
     <string name="authorize_title">Autorizare</string>
-    <string name="barcode_add_account_prompt">Pentru a adăuga un cont, scanaţi codul QR din nou după conectare.</string>
     <string name="bind_facebook">Adăugaţi contul dvs. Facebook</string>
     <string name="bind_qq">QQ</string>
     <string name="bind_settings">Conturi</string>
@@ -168,6 +167,10 @@
     <string name="notify_network_restricted_content_hidden_state">"Rularea în fundal pentru Contul Mi este restricționată. Atingeți pentru a permite."</string>
     <string name="notify_network_restricted_content_mobile_network">"Conectarea la internet pentru Contul Mi este restricționată. Atingeți pentru a permite conectarea."</string>
     <string name="notify_network_restricted_title">"Aplicația Cont Mi nu s-a putut conecta la rețea"</string>
+    <string name="oauth_get_scopes_failed">"Nu s-au putut obține informațiile contului"</string>
+    <string name="oauth_getting_scopes">Verificare cont…</string>
+    <string name="oauth_scopes_intro">&lt;font color=#%1$s&gt;%2$s&lt;/font&gt; va obține următoarele permisiuni:&lt;br&gt; &lt;br&gt; %3$s</string>
+    <string name="oauth_title">Conectați-vă utilizând contul Mi</string>
     <string name="other_devices_title">Alte dispozitive</string>
     <string name="passport_access_denied">Acces refuzat</string>
     <string name="passport_account_hint_text">Adresă de e-mail sau ID cont Mi</string>
@@ -183,6 +186,7 @@
     <string name="passport_auto_generate_pwd">Generați o parolă sigură</string>
     <string name="passport_back">Înapoi</string>
     <string name="passport_bad_authentication">Nume de utilizator sau parolă greşite</string>
+    <string name="passport_barcode_add_account_prompt">Pentru a conecta un cont, scanați codul QR din nou după ce vă conectați.</string>
     <string name="passport_change_account">Schimbaţi contul</string>
     <string name="passport_change_phone_number">Comutare numere</string>
     <string name="passport_checking_account">Verificare parolă…</string>
@@ -362,7 +366,7 @@ Asigurați-vă că știți răspunsurile la aceste întrebări."</string>
     <string name="unbind_sns_description">"După ce vă veți deconecta de la acest cont, nu veți putea utiliza %s pentru a vă accesa contul dvs. Mi."</string>
     <string name="unlock_help_notice">"Ajutor:
 · Dacă v-ați uitat parola, accesați id.mi.com pentru a o reseta.
-· Dacă nu vă puteți debloca telefonul, accesați i.mi.com pentru a dezactiva Localizarea telefonului
+· Dacă nu vă puteți debloca telefonul, accesați i.mi.com pentru a dezactiva Localizarea telefonului.
 · Furnizați acest cod Serviciului Clienți: %s"</string>
     <string name="update_contacts">Actualizaţi contactele</string>
     <string name="update_email_address_dialog_message">Trebuie să vă verificați identitatea înainte de a actualiza e-mailul.</string>
