--- a/Romanian/main/miuisystem.apk/res/values-ro/strings.xml
+++ b/Romanian/main/miuisystem.apk/res/values-ro/strings.xml
@@ -28,6 +28,7 @@
     <string name="menu_add_frequent_phrases">Adăugați</string>
     <string name="menu_delete">Ștergeți</string>
     <string name="menu_edit">Editați</string>
+    <string name="miclassic">MiClassic</string>
     <string name="miui_device_name">Android</string>
     <string name="no_notification_tips">Nicio notificare</string>
     <string name="presentation_payphone">Payphone</string>
